syntax="proto3";

package platform.write_target;
option go_package = "github.com/smartcontractkit/chainlink-framework/capabilities/writetarget/monitoring/pb/platform;writetarget";

import "monitoring/execution_context.proto";
import "capabilities/writetarget/monitoring/pb/common/block_data.proto";

// WT confirmed the report was successfully written on-chain
message WriteConfirmed {
  string node = 1;
  string forwarder = 2;
  string receiver = 3;

  // Report Info
  uint32 report_id = 4;
  bytes report_context = 5;
  bytes report = 6;
  uint32 signers_num = 7;

  // TODO: Is the report confirmed finalized on-chain, or just observed?

  // When was the report confirmed on-chain
  common.BlockData block_data = 9;

  // Transmission Info
  string transmitter = 12;
  bool success = 13;
  // TODO: what about EVM's TransmissionInfo parity?

  // [Execution Context]
  monitoring.ExecutionContext execution_context = 20;

  // encoder processor info
  string meta_capability_processor = 21;
}
